k8s/manifests-9d892a/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-9d892a
  namespace: journee
  labels:
    app: journee-9d892a
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-9d892a
  template:
    metadata:
      labels:
        app: journee-9d892a
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-9d892a
          image: gcr.io/my-docker-471807/journee:v6.0.0
          ports:
            - containerPort: 3000
